# image-steganography

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  main.cpp
src/util/: RGB.hpp  image.cpp  image.hpp
tests/: CMakeLists.txt  test-decoder.cpp  test-encoder.cpp  test-image.cpp  test-main.cpp
